_SOFTWARE_FACTORY/_archive/veligo/ralph-wiggum/logs/T015_20260112_181535.log
[96m[1m| [0m[90m Read     [0mveligo-platform/tests/e2e/api/tracking.api.spec.ts
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/tracking-abeeway/**/*.rs"}
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/tracking-velco/**/*.rs"}
Je vois les 4 tests qui ont un `test.skip()` conditionnel basé sur `authToken`. Vérifions le code backend pour l'API tracking.
[94m[1m| [0m[90m Grep     [0m/api/tracking
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/tracking*/**/*.rs"}
[91m[1m| [0m[90m Bash     [0mFind tracking Rust files

/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/tenant/backend-api/target/debug/build/veligo-api-5bbed9096b896166/out/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/tenant/backend-api/target/debug/build/veligo-api-065c2c82645b8160/out/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/tenant/backend-api/target/debug/build/veligo-api-de065bad544d1bab/out/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/tenant/backend-api/target/debug/build/veligo-api-3bc05c8d680788be/out/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/tenant/backend-api/src/generated/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/tenant/backend-api/src/infrastructure/grpc/generated/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/tenant/backend-api/src/modules/tracking_module.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/tenant/backend-api/src/modules/tracking_adapter.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/owner/backend/src/generated/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/owner/backend/src/infrastructure/grpc/generated/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/owner/backend/src/modules/tracking_module.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/owner/backend/src/modules/tracking_adapter.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/target/release/build/veligo-api-4052aaf4485292fc/out/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/target/release/build/veligo-api-26307b976dbaaa6d/out/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/target/release/build/veligo-api-4de206c12425c44b/out/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/target/release/build/veligo-api-7e3a356ee619df0a/out/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/target/debug/build/veligo-api-d0bda03dea4c51df/out/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/target/debug/build/veligo-api-d8bf12bcacb15cb7/out/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/target/debug/build/veligo-api-456f39b949af9075/out/tracking.v1.rs
/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/target/debug/build/veligo-api-ba9a4ef9a236d54a/out/tracking.v1.rs

[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/tracking/routes.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/tracking/mod.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/tracking/repository.rs
Le code backend existe déjà. Vérifions comment les routes tracking sont montées dans l'application principale.
[94m[1m| [0m[90m Grep     [0mtracking_routes
[94m[1m| [0m[90m Grep     [0mapi/tracking
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/http-server.rs
Les routes tracking existent dans `routes.rs` mais ne sont pas montées sous `/api/tracking`. Vérifions comment elles sont utilisées et ajoutons-les au http-server.rs.
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/http/webhooks/mod.rs
Les routes existent mais sous `/bikes/:bike_id/position`. Le test attend `/api/tracking/bike/123` (singulier). Je dois ajouter les routes tracking au http-server.rs avec le bon chemin.
[94m[1m| [0m[90m Grep     [0minfrastructure::tracking
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/lib.rs
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/veligo-api/src/lib.rs"}
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/mod.rs
Le module `tracking` existe. Je dois maintenant monter les routes. Vérifions d'abord l'état actuel des tests en les exécutant.
[91m[1m| [0m[90m Bash     [0mRun tracking E2E tests



<bash_metadata>
bash tool terminated command after exceeding timeout 120000 ms
</bash_metadata>

Le test a expiré. Modifions le code backend pour ajouter les routes tracking au bon chemin. D'abord, modifions `routes.rs` pour utiliser `/bike/:bike_id/` au lieu de `/bikes/:bike_id/`.
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/infrastructure/tracking/routes.rs
Maintenant ajoutons les routes tracking dans http-server.rs. D'abord, ajoutons l'import:
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/bin/http-server.rs
Maintenant ajoutons le montage des routes dans le Router, juste avant les webhooks:
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/bin/http-server.rs
Vérifions que le code compile:
[91m[1m| [0m[90m Bash     [0mCheck Rust compilation


warning: method `resolve_tenant_id` is never used
  --> backend/src/bin/../grpc/services/booking_service.rs:59:14
   |
53 | impl BookingServiceImpl {
   | ----------------------- method in this implementation
...
59 |     async fn resolve_tenant_id(&self, tenant_id: &str) -> Result<Uuid, Status> {
   |              ^^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `tracking_routes` in this scope
   --> backend/src/bin/http-server.rs:271:13
    |
271 |             tracking_routes(TrackingState::new(pool_arc.clone())),
    |             ^^^^^^^^^^^^^^^
    |
   ::: /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/api/pricing_api.rs:23:1
    |
 23 | pub fn pricing_routes(pool: PgPool) -> Router {
    | --------------------------------------------- similarly named function `pricing_routes` defined here
    |
help: a function with a similar name exists
    |
271 -             tracking_routes(TrackingState::new(pool_arc.clone())),
271 +             pricing_routes(TrackingState::new(pool_arc.clone())),
    |
help: consider importing one of these functions
    |
  5 + use crate::webhooks::tracking_routes;
    |
  5 + use veligo_api::infrastructure::http::tracking_routes;
    |
  5 + use veligo_api::infrastructure::tracking::routes::tracking_routes;
    |

error[E0433]: failed to resolve: use of undeclared type `TrackingState`
   --> backend/src/bin/http-server.rs:271:29
    |
271 |             tracking_routes(TrackingState::new(pool_arc.clone())),
    |                             ^^^^^^^^^^^^^ use of undeclared type `TrackingState`
    |
help: consider importing this struct
    |
  5 + use veligo_api::infrastructure::tracking::routes::TrackingState;
    |

warning: `veligo-api` (bin "tonic-server") generated 6 warnings (run `cargo fix --bin "tonic-server" -p veligo-api` to apply 1 suggestion)
Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `veligo-api` (bin "http-server") due to 2 previous errors

Corrigeons l'import - `TrackingState` et `tracking_routes` sont dans `tracking::routes`:
[94m[1m| [0m[90m Grep     [0mtracking
